; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_html.c_html_setfont.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_html.c_html_setfont.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.html = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @html_setfont(%struct.html* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.html*, align 8
  %5 = alloca i32, align 4
  store %struct.html* %0, %struct.html** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 129, label %7
    i32 130, label %11
    i32 132, label %11
    i32 133, label %11
    i32 131, label %11
    i32 128, label %11
    i32 134, label %12
  ]

7:                                                ; preds = %2
  %8 = load %struct.html*, %struct.html** %4, align 8
  %9 = getelementptr inbounds %struct.html, %struct.html* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  br label %14

11:                                               ; preds = %2, %2, %2, %2, %2
  br label %14

12:                                               ; preds = %2
  store i32 128, i32* %5, align 4
  br label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

14:                                               ; preds = %12, %11, %7
  %15 = load %struct.html*, %struct.html** %4, align 8
  %16 = getelementptr inbounds %struct.html, %struct.html* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.html*, %struct.html** %4, align 8
  %19 = getelementptr inbounds %struct.html, %struct.html* %18, i32 0, i32 0
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.html*, %struct.html** %4, align 8
  %22 = getelementptr inbounds %struct.html, %struct.html* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %14, %13
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
